--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.38.2",
     "@netlify/plugin-nextjs": "^5.15.8",
     "next": "16.1.6",
     "react": "19.2.3",
